--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,17 @@
         "fabpot/goutte": "~3.1",
         "league/geotools": "~0.7"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0|~5.0"
+    },
     "autoload": {
         "psr-4": {
             "Mpt\\": "src/Mpt"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     }
 }
