--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": ">=7.0.0",
         "fabpot/goutte": "~3.1",
-        "league/geotools": "~0.7"
+        "willdurand/geocoder": "~3.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0|~5.0"
