--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=7.0.0",
         "fabpot/goutte": "~3.1",
-        "nesbot/carbon": "^2.3",
+        "nesbot/carbon": "~1.20",
         "php-http/client-common": "^1.8",
         "php-http/discovery": "^1.4",
         "php-http/httplug": "^1.1",
